Edited email.tpl.html via GitHub

--- a/email.tpl.html
+++ b/email.tpl.html
@@ -8,6 +8,10 @@
 <meta http-equiv="Content-Language" content="en">
 <meta name="robots" content="index, follow">
 <meta http-equiv="imagetoolbar" content="no">
+
+
+adsdasd
+
 <style type="text/css">
 h1
 {
